[project]
name = "mango-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables==0.17.0",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "plotly>=6.1.1",
    "polars==1.29.0",
    "python-dotenv>=1.1.0",
    "selenium>=4.32.0",
    "shiny>=1.4.0",
    "shinywidgets>=0.6.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
